styles/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    scroll-behavior: smooth;
  }
  body {
    @apply antialiased bg-white dark:bg-black text-gray-700 dark:text-gray-300;
  }
  strong {
    @apply font-semibold;
  }
  *::selection {
    @apply bg-green-250 text-gray-950 dark:bg-magenta dark:text-gray-50;
  }
}

@layer utilities {
  @supports (backdrop-filter: none) {
    .backdrop-blur {
      @apply bg-white dark:bg-black bg-opacity-70 dark:bg-opacity-50;
      backdrop-filter: saturate(1.8) blur(5px);
    }
  }
  @supports not (backdrop-filter: none) {
    .backdrop-blur {
      @apply bg-white dark:bg-black bg-opacity-90 dark:bg-opacity-90;
    }
  }
}

